den1-k8s01/warehouse20/plex-gooery/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-gooery
  namespace: warehouse20
  labels:
    app: plex
    instance: gooery
spec:
  type: ClusterIP
  ports:
  - name: https
    targetPort: https
    port: 32400
    protocol: TCP
  selector:
    app: plex
    instance: gooery
